--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,61 +1,105 @@
-body, html {
-  height: 100%;
-  width: 100%;
-  display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto Mono', "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
-  font-size: 13px;
-  line-height: 22px;
-  color: #111;
-  background-color: #fff;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-h1 {
-  margin: 0 0 7px 0;
-  font-size: 13px;
-  line-height: 22px;
-  font-weight: normal;
-}
+@layer utilities {
+  /* https://leerob.io/blog/how-stripe-designs-beautiful-websites */
+  body {
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 
-p {
-  width: 100%;
-  max-width: 600px;
-  margin: 0 0 22px 0;
-  color: rgba(0,0,0,0.5);
-}
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
 
-p a {
-  position: relative;
-  color: rgba(0,0,0,0.5);
-  text-decoration: none;
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-}
+  input[type="range"]::-webkit-slider-thumb {
+    @apply appearance-none rounded-full w-[18px] h-[18px] bg-primary-base cursor-pointer;
+  }
 
-p a:hover {
-  color: #086efa;
-}
+  .scrollbar-hide {
+    -ms-overflow-style: none;
 
-p a:after {
-  content: '';
-  position: absolute;
-  bottom: -4px;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background: rgba(0,0,0,0.1);
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-}
+    /* firefox */
+    scrollbar-width: none;
 
-p a:hover:after {
-  background: #086efa;
+    /* safari and chrome */
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  /* Prevent auto-outlining */
+  * {
+    @apply outline-none;
+  }
+  *:focus {
+    @apply outline-none;
+  }
+
+  /* TODO: Legacy below; to be migrated */
+  html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto Mono", "Courier New", Courier, "Lucida Sans Typewriter",
+      "Lucida Typewriter", monospace;
+    font-size: 13px;
+    line-height: 22px;
+    color: #111;
+    background-color: #fff;
+  }
+
+  h1 {
+    margin: 0 0 7px 0;
+    font-size: 13px;
+    line-height: 22px;
+    font-weight: normal;
+  }
+
+  p {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 0 22px 0;
+    color: rgba(0, 0, 0, 0.5);
+  }
+
+  p a {
+    position: relative;
+    color: rgba(0, 0, 0, 0.5);
+    text-decoration: none;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+
+  p a:hover {
+    color: #086efa;
+  }
+
+  p a:after {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: rgba(0, 0, 0, 0.1);
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+
+  p a:hover:after {
+    background: #086efa;
+  }
 }
